# snow

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  windows.cmake
include/: glCompute.h  id.h  logo.h  main.h  rand.h  version.h
include/jGL/: debug.h  defaultFont.h  font.h  glyph.h  jGL.h  orthoCam.h  particles.h  primitive.h  priorityStore.h  shader.h  shape.h  shapeRenderer.h  sprite.h  spriteRenderer.h  texture.h  uniform.h  warning.h
include/jGL/Display/: desktopDisplay.h  display.h  event.h
include/jGL/OpenGL/: gl.h  glDebug.h  glDrawFramebuffer.h  glParticles.h  glShapeRenderer.h  glSpriteRenderer.h  openGLInstance.h
include/jGL/OpenGL/Shader/: glShader.h
include/jGL/OpenGL/Text/: glFont.h  glTextRenderer.h
include/jGL/OpenGL/Texture/: glTexture.h
include/jGL/Vulkan/: buffer.h  framebuffer.h  pipeline.h  surface.h  swapchain.h  vkDebug.h  vkParticles.h  vkShapeRenderer.h  vkSpriteRenderer.h  vulkanInstance.h
include/jGL/Vulkan/Command/: command.h  commandBuffer.h  commandPool.h
include/jGL/Vulkan/Descriptor/: descriptorPool.h  descriptorSets.h
include/jGL/Vulkan/Device/: device.h  logicalDevice.h  physicalDevice.h
include/jGL/Vulkan/RenderPass/: renderPass.h
include/jGL/Vulkan/Shader/: uniformBuffer.h  vertexBuffer.h  vkShader.h
include/jGL/Vulkan/Text/: vkFont.h  vkTextRenderer.h
include/jGL/Vulkan/Texture/: vkSampler.h  vkTexture.h
include/jLog/: jLog.h
include/jThread/: LICENSE  jThread.h
src/: main.cpp  rand.cpp
